# CGEngine

./: .gitignore  CMakeLists.txt  README.md
CgEngineCore/: CMakeLists.txt
CgEngineCore/includes/CgEngineCore/: Application.hpp  Camera.hpp  Input.hpp  Keys.hpp  Log.hpp  test.hpp
CgEngineCore/includes/CgEngineCore/Events/: Event.hpp
CgEngineCore/src/CgEngineCore/: Application.cpp  Camera.cpp  Input.cpp  Window.cpp  Window.hpp  test.cpp
CgEngineCore/src/CgEngineCore/Modules/: UIModule.cpp  UIModule.hpp
CgEngineCore/src/CgEngineCore/Rendering/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  Bone.cpp  Bone.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Render_OpenGl.cpp  Render_OpenGl.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  stb_image.cpp
CgEngineCore/src/CgEngineCore/Utils/: ResourseManager.cpp  ResourseManager.hpp
CgEngineCore/src/CgEngineCore/test/: anim.hpp  animation.hpp  animator.hpp  assimphelp.hpp  bone.hpp  mesh.hpp  model.hpp  shader.hpp  test.hpp
CgEngineEditor/: CMakeLists.txt
CgEngineEditor/src/: main.cpp
